# libvktypes

./: Cargo.toml  LICENSE  README.md
examples/: Cargo.toml  cube.rs  depth_buffer.rs  single_shader_triangle.rs  texture.rs  two_triangles.rs  uniform.rs  vertex_buffer.rs
examples/compiled_shaders/: color_from_vertex.spv  depth_buffer.frag.spv  depth_buffer.vert.spv  single_color.spv  single_dot.spv  single_triangle.spv
examples/shaders/: color_from_vertex.frag  depth_buffer.frag  depth_buffer.vert  single_color.frag  single_dot.vert  single_triangle.vert  vertex_input.vert
src/: alloc.rs  cmd.rs  cmd_queue.rs  compute.rs  debug.rs  dev.rs  extensions.rs  formats.rs  graphics.rs  hardware.rs  hw.rs  instance.rs  layers.rs  lib.rs  libvk.rs  logical_device.rs  macros.rs  memory.rs  offset.rs  pipeline.rs  queue.rs  shader.rs  specialization_constants.rs  surface.rs  swapchain.rs  sync.rs  utils.rs  window.rs
src/dev/: core.rs  device.rs  mod.rs
src/graphics/: mod.rs  pipeline.rs  pipeline_descriptor.rs  render_pass.rs  resource.rs  sampler.rs  vertex_view.rs
src/memory/: base.rs  framebuffer.rs  image.rs  layout.rs  memory.rs  mod.rs  region.rs  storage.rs  uniform_buffer.rs  vertex_buffer.rs  view.rs
src/pipeline/: bindings.rs  compute.rs  graphics.rs  layout.rs  mod.rs
src/resources/: compute.rs  debug.rs  dev.rs  hw.rs  (+5 more)
tests/: cmd.rs  compute_pipeline.rs  dev.rs  graphics_pipeline.rs  hw.rs  initlib.rs  lib.rs  libvk.rs  memory.rs  mod.rs  queue.rs  render_pass.rs  shader.rs  surface.rs  swapchain.rs  sync.rs  test_context.rs  tests.rs  window.rs
(+11 files in other folders)
